--- a/testmapcode.html
+++ b/testmapcode.html
@@ -3,35 +3,11 @@
 <head>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="./mymap.js"></script>
+  <link href="./hkmap.css" rel="stylesheet">
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
   <meta charset="utf-8">
-  <title>Simple Polygon</title>
-  <style>
-  /* Always set the map height explicitly to define the size of the div
-  * element that contains the map. */
-  #map {
-    height: 100%;
-  }
-  /* Optional: Makes the sample page fill the window. */
-  html, body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-  }
-  #floating-panel {
-        position: absolute;
-        top: 10px;
-        left: 10%;
-        z-index: 5;
-        background-color: #fff;
-        padding: 5px;
-        border: 1px solid #999;
-        text-align: center;
-        font-family: 'Roboto','sans-serif';
-        line-height: 30px;
-        padding-left: 10px;
-      }
-  </style>
+  <title>Simple Hong Kong Map</title>
+
 </head>
 <body>
   <div id="floating-panel">
@@ -54,11 +30,13 @@ function list4popul(data, year){
 function popul_color(districtyear){
   // found the maximum population among the districts
   var RGBcolor=[];
-  var max_population = 0
+  var max_population = 659794;
+
   for (var district in districtyear){
+    /*
     if (districtyear[district] > max_population){
     max_population = districtyear[district];
-  }
+  }  */
   var ratio = 255 / max_population;
   RGBcolor.push(Math.round(ratio*districtyear[district]).toString(16));
 }
